# llms-and-multi-agent-orchestration

./: .gitignore  README.md  main.py  prompts.md  prompts.txt  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: setup-auth.sh
.github/workflows/: ruff.yaml
.opencode/agent/: german-english-translator.md  pydantic-ai-expert.md  reflex-docs-expert.md  self-evaluation-expert.md
HW1/: prompts.md  pytest.ini  rxconfig.py
HW1/app/: state.py
HW1/app/views/: templates.py
HW1/tests/: README.md  setup_tests.sh
HW1/tests/e2e/: test_chat_e2e.py
HW2/: L2-homework.md  Our-Workflow-Process.md  round_trip_translations.md  setnences.md  solution.py  visualize_clean_mix.py
HW2/.opencode/agent/: french-german-translator.md  keras-expert.md
HW2/data/: 0_percent_errors.json
HW2/output/: 0_percent_errors_results.json  25_percent_errors_results.json  50_percent_errors_results.json
HW3/: Our-Workflow-Process.md  experiment.py
HW3/.opencode/agent/: english-french-translator.md
HW3/.opencode/command/: translation-round-trip.md
HW3/assets/: experiment_results.txt
HW3/data/: 25_percent_errors.json  50_percent_errors.json
HW5/: .env.example  BASELINE.md  PRD.md  README.md  __init__.py  ollama-rag-installation.md  pyproject.toml  queries.py  requirements-dev.txt  requirements.txt  self-evaluation.md  test_sequential_fix.py
HW5/experiments/: __init__.py  experiment_1_baseline.py  experiment_1_baseline_plus.py  experiment_3_local_vs_cloud.py  experiment_4_advanced.py
HW5/results/: experiment_1_baseline.json  experiment_1_baseline_plus.json  experiment_2_chunky.json  experiment_2_llm_small.json  experiment_3_cloud.json  experiment_3_hybrid.json  experiment_3_local.json  experiment_4_basic.json  experiment_4_contextual.json  experiment_4_rerank.json  final_summary_report.md  sub_experiment_1_report.md  sub_experiment_2_report.md  sub_experiment_3_report.md  sub_experiment_4_report.md
HW5/results/chroma_baseline/: chroma.sqlite3
HW5/results/chroma_llama32_3b/: chroma.sqlite3
HW5/tests/: test_contextualizer.py  test_metrics.py  test_rag_pipeline.py  test_rerankers.py  test_visualize.py
HW5/utils/: __init__.py  contextualizer.py  metrics.py  rag_pipeline.py  rerankers.py  visualize.py
HW7/: .env.example  CONTRACTS.md  PRD.md  README.md  launcher.py  pytest.ini  requirements.txt
HW7/league_manager/: main.py
HW7/player/: main.py
HW7/referee/: main.py
HW7/shared/: enums.py  schemas.py  settings.py
HW7/tests/: __init__.py  conftest.py  test_endpoints.py  test_game_logic.py  test_launcher.py  test_schemas.py
HW9/: .env.example  EXAMPLE_OUTPUT.txt  PRD.md  README.md  deepfake_detector.py  example_usage.py  requirements.txt  test_deepfake_detector.py
HW9/tests/: test_deepfake_detector.py
app/: app.py  state.py  style.py
app/components/: badge.py  hint.py  reset.py  settings.py  sidebar.py
app/views/: chat.py  templates.py
tests/: conftest.py  test_state.py
