[project]
name = "llms-and-multi-agent-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.7",
    "ollama",
    "pydantic-ai>=1.7.0",
    "pypdf",
    "reflex>=0.8.17",
    "sentence-transformers>=5.1.2",
    "unstructured>=0.18.21",
    "rank-bm25>=0.2.2",
    "langchain-chroma>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
]
