[project]
name = "hw5-rag-pipeline"
version = "0.1.0"
description = "RAG Pipeline Experimentation Framework using Ollama"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "LLMs and Multi-Agent Orchestration" }
]

dependencies = [
    # Core dependencies
    "ollama",
    # LangChain ecosystem for RAG pipeline
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-chroma>=1.0.0",
    # Vector store and embeddings
    "chromadb",
    # Document processing
    "pypdf",
    "unstructured>=0.18.21",
    # Reranking and retrieval
    "rank-bm25>=0.2.2",
    # Data analysis and visualization
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    # Environment management
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["experiments", "utils"]
include = ["queries.py", "data/*.pdf", ".env.example"]
